--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "841db93c-6d3b-42e9-8ca4-5acf8afbdfac",
+   "execution_count": 2,
+   "id": "58203d42-06a4-4f68-aa3d-5528c12a7a9f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests as req\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "import json\n",
     "import time\n",
     "%matplotlib inline"
@@ -18,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f53d5829-89b7-4e03-ad72-9b21753defdb",
+   "id": "22f5ed6f-ec92-4fba-aeb5-463b17743b82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,28 +32,13 @@
     "    time.sleep(10)\n",
     "\n",
     "df = pd.DataFrame(position, columns = ['Timestamp','Latitude','Longitude'])\n",
-    "df.to_csv('iss.csv')"
+    "print(df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3075bbf-2c52-4b25-a9c8-5463997efe82",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('iss.csv')\n",
-    "plt.plot(df.latitude,df.longitude,'m.')\n",
-    "plt.xlabel('Latitude')\n",
-    "plt.ylabel('Longitude')\n",
-    "plt.title('International Space Station Path')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "655953f5-f1e4-42a8-a53e-6ae0719ffb1b",
+   "id": "bb4793e6-6e1a-4c9f-9757-5c0a769ebe61",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -77,11 +61,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "6859bec0db56e71a986cdf9346d3132d3efe9670247eb6eb9b45748cdf7aaee6"
-   }
   }
  },
  "nbformat": 4,
